fix: fix first shown notification

This makes sure that the observer registrations are in the correct
order.

Bug: 901350
Change-Id: I57f45c7e605984928546d85386bdfb8e19f67352
Reviewed-on: https://chromium-review.googlesource.com/c/1314597
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Commit-Queue: Richard Knoll <knollr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605330}