chrome/browser/notifications/popups_only_ui_controller.cc
@@ -8,12 +8,15 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/display/screen.h"
 #include "ui/message_center/message_center.h"
 
-PopupsOnlyUiController::PopupsOnlyUiController(
-    std::unique_ptr<Delegate> delegate)
-    : message_center_(message_center::MessageCenter::Get()),
-      delegate_(std::move(delegate)) {
+PopupsOnlyUiController::PopupsOnlyUiController()
+    : message_center_(message_center::MessageCenter::Get()) {
   message_center_->AddObserver(this);
   message_center_->SetHasMessageCenterView(false);
+
+  // Initialize delegate after calling message_center_->AddObserver to ensure
+  // the correct order of observers. (PopupsOnlyUiController has to be called
+  // before MessagePopupCollection, see crbug.com/901350)
+  delegate_ = CreateDelegate();
 }
 
 PopupsOnlyUiController::~PopupsOnlyUiController() {
